@@ -1,0 +1,11 @@
+AT_SETUP([setup in subdirectory])
+MTN_SETUP
+
+# Set up a project
+AT_CHECK(MTN setup --branch=testbranch foo, [], [ignore], [ignore])
+
+# Then set up another project in a subdirectory without giving a database
+# or branch.  mtn SHOULD fail on this.
+AT_CHECK(cd foo && SAFE_MTN setup bar, [1], [ignore], [ignore])
+
+AT_CLEANUP
