@@ -873,5 +873,5 @@ m4_include(tests/t_pidfile.at)
 m4_include(tests/t_rosterify_empty_manifest.at)
 m4_include(tests/t_netsync_no_include.at)
 m4_include(tests/t_pidfile_log_permissions.at)
-
 m4_include(tests/t_executable_umask.at)
+m4_include(tests/t_setup_workspace_in_workspace.at)
