@@ -1,3 +1,13 @@
+2006-04-14  Richard Levitte  <richard@levitte.org>
+
+	* commands.cc (CMD(setup)): Make this a CMD_NO_WORKSPACE.  The
+	reason is a use-case, when someone setup a new project as a
+	subdirectory of another project, and forgot to give the database
+	and branch for this new project, and thereby ended up having it
+	be in the same database and branch as the parent directory.
+	* tests/t_setup_workspace_in_workspace.at (setup in subdirectory),
+	testsuit.at: Add a test for it.
+
 2006-04-12  Nathaniel Smith  <njs@pobox.com>
 
 	* unix/process.cc (read_umask): New function.
